--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
     "multer": "^1.4.1",
-    "node-datetime": "^2.1.2"
+    "node-datetime": "^2.1.2",
+    "nodemailer": "^4.7.0",
+    "randomstring": "^1.1.5"
   }
 }
